overflow:scroll to fix it wierding out on phones

--- a/Styles.css
+++ b/Styles.css
@@ -3,7 +3,7 @@
       background-color: #272727;
       color:#14A76c ;
       font-family: 'Roboto Mono', monospace;
-      overflow: hidden;
+      overflow: scroll;
     }
     footer{
       text-align: center;
